Update `OverlapSaveAdapter` to use `getFirst` for kernel switching and upgrade Maven compiler release to 24.